crates/rastair-vcf/src/fields/snapshots/rastair_vcf__fields__info_field__tests__flags.snap
---
source: crates/rastair-vcf/src/fields/info_field.rs
expression: result
---
##fileformat=VCFv4.2
##FILTER=<ID=PASS,Description="All filters passed">
##contig=<ID=1,length=10>
##INFO=<ID=Flag,Number=0,Type=Flag,Description="Test flag 1">
##INFO=<ID=Glag,Number=0,Type=Flag,Description="Test flag 2">
##INFO=<ID=Klag,Number=0,Type=Flag,Description="Test flag 3">
#CHROM	POS	ID	REF	ALT	QUAL	FILTER	INFO
1	1	.	.	.	0	.	Flag;Glag;Klag
